[tool.poetry]
name = "lastfm-to-sqlite"
version = "1.0.0"
description = "Save data from last.fm/libre.fm to a SQLite database"
authors = ["Jacob Kaplan-Moss <jacob@jacobian.org>"]
license = "wtfpl"
readme = "README.md"
repository = "https://github.com/jacobian/lastfm-to-sqlite/"

[tool.poetry.scripts]
lastfm-to-sqlite = "lastfm_to_sqlite.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
pylast = "*"
sqlite-utils = "*"
click = "*"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
